--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
-    "express": "^4.18.2"
+    "@hapi/boom": "^10.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "joi": "^17.11.0"
+  },
+  "devDependencies": {
+    "@types/joi": "^17.2.3"
   }
 }
